errorhandling
There is a small change in error handling in both versions. In python 3.x, ‘as’ keyword is required. 
try:

	trying_to_check_error

except NameError, err:

	print err, 'Error Caused' # Would not work in Python 3.x



'''

Output in Python 2.x:

name 'trying_to_check_error' is not defined Error Caused



Output in Python 3.x :

File "a.py", line 3

	except NameError, err:

					^

SyntaxError: invalid syntax

'''

---------------------------------------another example---------------------------------------------------------
try:

	trying_to_check_error

except NameError as err: # 'as' is needed in Python 3.x

	print (err, 'Error Caused')



'''

Output in Python 2.x:

(NameError("name 'trying_to_check_error' is not defined",), 'Error Caused')



Output in Python 3.x :

name 'trying_to_check_error' is not defined Error Caused

'''
